# LISYclock

./: .env.example  .gitignore  API.md  CLAUDE.md  CMakeLists.txt  README.md  build_and_deploy.ps1  sdkconfig
components/arduino/: CMakeLists.txt  CMakeLists_org.txt  CMakeLists_witai.txt
components/arduino/libraries/ESP32-audioI2S/src/: Audio.h
components/arduino/libraries/TM1637TinyDisplay/src/: TM1637TinyDisplay6.cpp
components/arduino/libraries/WitAITTS/src/: WitAITTS.cpp  WitAITTS.h
main/: CMakeLists.txt  audio.cpp  audio.h  buttons.c  config.c  event.cpp  ftp.c  ftp.h  fupdate.c  gpiodefs.h  httpserver.c  httpserver.h  i2cdev.c  idf_component.yml  leds.c  lisyclock.cpp  sdcard.c  set_time.c  sntp.c  typedefs.h  usb_com.c  usb_com.h
